# Rubixcubesolver

./: BFSSolver.h  CMakeLists.txt  CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  RubiksCube.cpp  RubiksCube.h  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp  Rubikscube1dArray.cpp  main.cpp  math.cpp  math.h
